--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "mongo": "mongod --dbpath db",
     "start": "node app.js",
-    "postinstall": "gulp build",
+    "postinstall": "gulp default",
     "dev": "nodemon app.js",
     "watch": "gulp server",
     "prod": "gulp build && node app.js",
