--- a/.env
+++ b/.env
@@ -2,34 +2,34 @@
 NODE_ENV= 'dev'
 
 # Connection string URI for your MongoDB database
-DATABASE=''
+DATABASE='mongodb://heroku_pzf68n75:testing123@ds127944.mlab.com:27944/heroku_pzf68n75'
 
 # Port that this app runs on
-PORT='3000'
+PORT='80'
 
 # Long random string used to verify JWT tokens for user authentication
-JWT_SECRET='shhhh super secret code here bro'
+JWT_SECRET='The Most Creative Minds in Boston'
 
 # Root URL for this app
-ROOT_URL='http://localhost:3000'
+ROOT_URL='https://test-quill-hbp19.herokuapp.com/'
 
 # Credentials for the admin user created at app initialization
-ADMIN_EMAIL='admin@example.com'
-ADMIN_PASS='party'
+ADMIN_EMAIL='team@hackbeanpot.com'
+ADMIN_PASS='wethrewaparty'
 
 # Used to send verification, registration, and confirmation emails
-EMAIL_CONTACT='Hackathon Team <team@example.com>'
+EMAIL_CONTACT='Hackathon Team <team@hackbeanpot.com>'
 EMAIL_HOST='smtp.gmail.com'
-EMAIL_USER='foo@bar.com'
-EMAIL_PASS='password'
+EMAIL_USER='nabeel@hackbeanpot.com'
+EMAIL_PASS='scolopendra112'
 EMAIL_PORT='465'
 EMAIL_HEADER_IMAGE='https://s3.amazonaws.com/hackmit-assets/Banner_600.jpg'
 
 # Information linked at the bottom of emails
-EMAIL_ADDRESS='team@example.com'
-HACKATHON_NAME='Hackathon'
-TWITTER_HANDLE='hackathon'
-FACEBOOK_HANDLE='hackathon'
+EMAIL_ADDRESS='team@hackbeanpot.com'
+HACKATHON_NAME='Hackbeanpot 2019'
+TWITTER_HANDLE='HackBeanpot'
+FACEBOOK_HANDLE='HackBeanpot'
 
 # Limits the number of users that can join a team
 TEAM_MAX_SIZE=4
