change env to prod, add build as postinstall in package.json

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # 'dev' or 'production'
-NODE_ENV= 'dev'
+NODE_ENV= 'production'
 
 # Connection string URI for your MongoDB database
 DATABASE='mongodb://heroku_pzf68n75:testing123@ds127944.mlab.com:27944/heroku_pzf68n75'
