--- a/.env
+++ b/.env
@@ -2,16 +2,18 @@
 NODE_ENV= 'production'
 
 # Connection string URI for your MongoDB database
-DATABASE='mongodb://heroku_pzf68n75:testing123@ds127944.mlab.com:27944/heroku_pzf68n75'
+# DATABASE='mongodb://heroku_pzf68n75:testing123@ds127944.mlab.com:27944/heroku_pzf68n75'
+DATABASE='mongodb://admin:adminman1@ds127944.mlab.com:27944/heroku_pzf68n75'
 
 # Port that this app runs on
-PORT='4311'
+PORT='3000'
 
 # Long random string used to verify JWT tokens for user authentication
 JWT_SECRET='The Most Creative Minds in Boston'
 
 # Root URL for this app
-ROOT_URL='https://test-quill-hbp19.herokuapp.com/'
+# ROOT_URL='test-quill-hbp19.herokuapp.com'
+ROOT_URL='localhost:3000'
 
 # Credentials for the admin user created at app initialization
 ADMIN_EMAIL='team@hackbeanpot.com'
